[tool.poetry]
name = "despliegue-tablero-nube"
version = "0.1.0"
description = ""
authors = ["Juan Felipe Padilla Sepulveda <j.padillas@uniandes.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.18.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
